--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "mongoose": "^7.0.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
-    "xss-clean": "^0.1.1"
+    "swagger-ui-express": "^4.6.2",
+    "xss-clean": "^0.1.1",
+    "yamljs": "^0.3.0"
   }
 }
