--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
     "express-mongo-sanitize": "^2.2.0",
