--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "community-api",
+  "name": "replace-apis",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start:dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "api": "^6.1.1",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "dotenv": "^16.3.1",
     "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
     "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^6.7.0",
+    "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
+    "hbs": "^4.2.0",
     "hpp": "^0.2.3",
-    "http-status-codes": "^2.2.0",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.4",
+    "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.1",
-    "socket.io": "^4.6.2",
-    "swagger-ui-express": "^4.6.2",
-    "xss-clean": "^0.1.1",
-    "yamljs": "^0.3.0"
+    "nodemailer": "^6.9.7",
+    "socket.io": "^4.7.2",
+    "uuid": "^9.0.1"
   }
 }
